[tool.poetry]
name = "cuteurl"
version = "0.1.0"
description = ""
authors = ["Richard Guan <rguan72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
python-dotenv = "^0.10.5"
Flask-SQLAlchemy = "^2.4.1"
flask-migrate = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
